// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormField > renders correctly with all elements 1`] = `
<div>
  <div class="text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
        <span class="text-muted" data-slot="hint" id="v-0-hint">Hint</span>
      </div>
      <p class="text-muted" data-slot="description" id="v-0-description">Description</p>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input aria-describedby="v-0-hint v-0-description v-0-help" class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
      <p class="mt-1 text-muted" data-slot="help" id="v-0-help">Help</p>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with class 1`] = `
<div>
  <div class="custom-class text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
      </div>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with description 1`] = `
<div>
  <div class="text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
      </div>
      <p class="text-muted" data-slot="description" id="v-0-description">Description</p>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input aria-describedby="v-0-description" class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with help 1`] = `
<div>
  <div class="text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
      </div>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input aria-describedby="v-0-help" class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
      <p class="mt-1 text-muted" data-slot="help" id="v-0-help">Help</p>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with hint 1`] = `
<div>
  <div class="text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
        <span class="text-muted" data-slot="hint" id="v-0-hint">Hint</span>
      </div>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input aria-describedby="v-0-hint" class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with label 1`] = `
<div>
  <div class="text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
      </div>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with size lg 1`] = `
<div>
  <div class="text-base" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
      </div>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with size md 1`] = `
<div>
  <div class="text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
      </div>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with size sm 1`] = `
<div>
  <div class="text-xs" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
      </div>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
    </div>
  </div>
</div>
`;

exports[`FormField > renders correctly with ui 1`] = `
<div>
  <div class="rounded-lg text-sm" data-slot="root">
    <div class data-slot="wrapper">
      <div class="flex gap-1 items-center justify-between" data-slot="labelWrapper">
        <label class="block font-medium text-default" data-slot="label" for="v-0" id="v-0-label">Label</label>
      </div>
    </div>
    <div class="mt-1" data-slot="container">
      <div class="inline-flex items-center relative" data-slot="root">
        <input class="appearance-none bg-elevated border-0 disabled:cursor-not-allowed disabled:opacity-75 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary focus:outline-none gap-1.5 px-2.5 py-1.5 ring ring-accented ring-inset rounded-md text-sm transition-colors w-full" data-slot="base" id="v-0" type="text">
      </div>
    </div>
  </div>
</div>
`;
